--- a/AssociacioEsportiva/public_html/assets/style.css
+++ b/AssociacioEsportiva/public_html/assets/style.css
@@ -7,6 +7,10 @@ body{
     font-family: 'Exo';
     min-height: 100vh;
 }
+body.popup{
+    background-image: url('../img/gym-01.jpg');
+    background-size: cover;
+}
 .page-footer{ position: fixed; left: 0; bottom: 0; right: 0; }
 .layer.overlay{
     position: fixed;
@@ -190,5 +194,21 @@ hr.separator{ margin: 20px auto; border: 2px solid rgba(64,0,0,0.25); }
 #login.popup{
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
+    z-index: -100;
+    pointer-events: none;
+    opacity: 0;
+    transition: 240ms ease-in;
 }
 
+#login.popup.active{
+    opacity: 1;
+    pointer-events: initial;
+    z-index: 100;
+}
+
+.container.popup{
+    background-image: url('../img/gym-01.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
