--- a/BuscaMinas/public_html/style.css
+++ b/BuscaMinas/public_html/style.css
@@ -42,6 +42,11 @@ body{
     transition: 250ms ease-in;
     background-color: rgba( 255,255,255,0.25);
     cursor: pointer;
+    
+    font-size: 18px;
+    line-height: 18px;
+    padding: 8px;
+    color: rgba(0,0,0,0.25);
 }
 #chuscaminas .grid .celda.cuidao:after{
     content: '!';
@@ -63,11 +68,15 @@ body{
     font-family: 'Material Icons';
     text-align: center;
     display: block;
+    width: 100%;
     color: #5a5a5a;
     font-size: 38px;
     line-height: 38px;
-    padding: 20% 0 0;
+    margin: 20% auto 0;
+    text-shadow: 0 0 8px rgba(0,0,0,0.25);
     vertical-align: middle;
+    position: absolute;
+    top: 0; left: 0;
 }
 #chuscaminas.status-3{ background-color: rgba(224,224,224,0.75); }
 #chuscaminas.status-1 .grid .celda:hover{
